# nRF54L15-Tag-Demo

./: .gitignore  CMakeLists.txt  CMakePresets.json  Kconfig  LICENSE  README.md  prj.conf  west.yml
boards/: nrf54l15tag_nrf54l15_cpuapp.conf  nrf54l15tag_nrf54l15_cpuapp.overlay
docs/: MOTION_SERVICE.md
src/: main.c
src/ble/: CMakeLists.txt  Kconfig  adv.c  adv.h  ble_core.c  ble_core.h
src/control/: CMakeLists.txt  Kconfig  control.c
src/cs/: CMakeLists.txt  Kconfig  cs_initiator.c  cs_initiator.h  cs_reflector.c  cs_reflector.h  cs_shared.c  cs_shared.h  distance.c  distance.h
src/ess/: CMakeLists.txt  Kconfig  ess.c  ess.h
src/motion/: CMakeLists.txt  Kconfig  motion.c  motion.h
src/sensors/: CMakeLists.txt  Kconfig  sensors.c  sensors.h
src/ux/: CMakeLists.txt  Kconfig  ux.c  ux.h
sysbuild/ipc_radio/: prj.conf
